--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/code.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oz_DEV</title>
+    <meta name="description" content="React Portfolio showcasing projects and skills of a talented developer." />
+    <meta name="keywords" content="React, Portfolio, Web Developer, JavaScript, Frontend" />
+    <meta name="author" content="Ozz" />
+    <title>React Portfolio</title>
+  
+    <!-- Open Graph for social media -->
+    <meta property="og:title" content="React Portfolio" />
+    <meta property="og:description" content="Showcasing projects and skills of a talented developer." />
+    <meta property="og:image" content="./src/assets/code.svg" />
+    <meta property="og:url" content="https://react-porto-psi.vercel.app" />
+    <meta property="og:type" content="website" />
+  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="React Portfolio" />
+    <meta name="twitter:description" content="Showcasing projects and skills of a talented developer." />
+    <meta name="twitter:image" content="/path-to-your-thumbnail-image.png" />
   </head>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
