--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="description" content="React Portfolio showcasing projects and skills of a talented developer." />
     <meta name="keywords" content="React, Portfolio, Web Developer, JavaScript, Frontend" />
     <meta name="author" content="Ozz" />
-    <title>React Portfolio</title>
+    <title>oz-dev</title>
   
     <!-- Open Graph for social media -->
     <meta property="og:title" content="React Portfolio" />
     <meta property="og:description" content="Showcasing projects and skills of a talented developer." />
-    <meta property="og:image" content="./src/assets/code.svg" />
+    <meta property="og:image" content="/assets/code.svg" />
     <meta property="og:url" content="https://react-porto-psi.vercel.app" />
     <meta property="og:type" content="website" />
   
