--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Open Graph for social media -->
     <meta property="og:title" content="React Portfolio" />
     <meta property="og:description" content="Showcasing projects and skills of a talented developer." />
-    <meta property="og:image" content="/assets/code.svg" />
+    <meta property="og:image" content="https://res.cloudinary.com/dwmecta8g/image/upload/v1732618082/650b08ed8fbda8b3164bb97e_Code_20Complexity__20How_20to_20Measure_20It_ago40c.png" />
+    <meta property="og:image:width" content="1200" />
     <meta property="og:url" content="https://react-porto-psi.vercel.app" />
     <meta property="og:type" content="website" />
   
