fixing bugs of projects

--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/react.svg" />
+    <link rel="icon" type="image/png" href="code.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="React Portfolio showcasing projects and skills of a talented developer." />
-    <meta name="keywords" content="React, Portfolio, Web Developer, JavaScript, Frontend" />
+
+    <title>oz-dev | React Developer Portfolio</title>
+    <meta name="description" content="Explore the portfolio of Ozz, a skilled React developer specializing in building modern, responsive, and high-performance web applications." />
     <meta name="author" content="Ozz" />
-    <title>oz-dev</title>
+    <link rel="canonical" href="https://react-porto-psi.vercel.app/" />
   
     <!-- Open Graph for social media -->
-    <meta property="og:title" content="React Portfolio" />
-    <meta property="og:description" content="Showcasing projects and skills of a talented developer." />
+    <meta property="og:title" content="oz-dev | React Developer Portfolio" />
+    <meta property="og:description" content="Explore the portfolio of Ozz, a skilled React developer specializing in modern web applications." />
     <meta property="og:image" content="https://res.cloudinary.com/dwmecta8g/image/upload/v1732618082/650b08ed8fbda8b3164bb97e_Code_20Complexity__20How_20to_20Measure_20It_ago40c.png" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:url" content="https://react-porto-psi.vercel.app" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://react-porto-psi.vercel.app/" />
     <meta property="og:type" content="website" />
-  
+      
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="React Portfolio" />
