--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>oz-dev | React Developer Portfolio</title>
-    <meta name="description" content="Explore the portfolio of Ozz, a skilled React developer specializing in building modern, responsive, and high-performance web applications." />
+    <meta name="description" content="Explore the portfolio of Asyraf, a full stack web developer specializing in React, Node.js, and MongoDB." />
     <meta name="author" content="Ozz" />
     <link rel="canonical" href="https://react-porto-psi.vercel.app/" />
   
     <!-- Open Graph for social media -->
-    <meta property="og:title" content="oz-dev | React Developer Portfolio" />
-    <meta property="og:description" content="Explore the portfolio of Ozz, a skilled React developer specializing in modern web applications." />
+    <meta property="og:title" content="Asyraf Dev | Full Stack Web Developer – React, Node.js, MongoDB" />
+    <meta property="og:description" content="Explore the portfolio of Asyraf Dev, a skilled React developer specializing in modern web applications." />
     <meta property="og:image" content="https://res.cloudinary.com/dwmecta8g/image/upload/v1732618082/650b08ed8fbda8b3164bb97e_Code_20Complexity__20How_20to_20Measure_20It_ago40c.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://react-porto-psi.vercel.app/" />
+    <meta property="og:url" content="https://www.asyrafdev.com" />
     <meta property="og:type" content="website" />
       
     <!-- Twitter Card -->
