--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <link rel="icon" type="image/png" href="code.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>oz-dev | React Developer Portfolio</title>
-    <meta name="description" content="Explore the portfolio of Asyraf, a full stack web developer specializing in React, Node.js, and MongoDB." />
-    <meta name="author" content="Ozz" />
-    <link rel="canonical" href="https://react-porto-psi.vercel.app/" />
-  
-    <!-- Open Graph for social media -->
-    <meta property="og:title" content="Asyraf Dev | Full Stack Web Developer – React, Node.js, MongoDB" />
-    <meta property="og:description" content="Explore the portfolio of Asyraf Dev, a skilled React developer specializing in modern web applications." />
+    <title>Muhammad Fauzan | Full-Stack React Developer Portfolio</title>
+    <meta name="description" content="Explore the portfolio of Muhammad Fauzan, a Full-Stack Web Developer skilled in React, Node.js, and MongoDB. Check out his projects, experience, and expertise." />
+    <meta name="author" content="Muhammad Fauzan" />
+    <link rel="canonical" href="https://www.asyrafdev.com" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Muhammad Fauzan | Full Stack Web Developer – React, Node.js, MongoDB" />
+    <meta property="og:description" content="Explore the portfolio of Muhammad Fauzan, a skilled React developer specializing in modern web applications." />
     <meta property="og:image" content="https://res.cloudinary.com/dwmecta8g/image/upload/v1732618082/650b08ed8fbda8b3164bb97e_Code_20Complexity__20How_20to_20Measure_20It_ago40c.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://www.asyrafdev.com" />
     <meta property="og:type" content="website" />
-      
+
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="React Portfolio" />
-    <meta name="twitter:description" content="Showcasing projects and skills of a talented developer." />
-    <meta name="twitter:image" content="/path-to-your-thumbnail-image.png" />
+    <meta name="twitter:title" content="Muhammad Fauzan | React Developer Portfolio" />
+    <meta name="twitter:description" content="Explore the skills and projects of Muhammad Fauzan, a Full-Stack Web Developer specializing in React and Node.js." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dwmecta8g/image/upload/v1732618082/650b08ed8fbda8b3164bb97e_Code_20Complexity__20How_20to_20Measure_20It_ago40c.png" />
   </head>
   
   <body>
